# rust_gui_test

./: Cargo.toml
src/: event.rs  lib.rs  size.rs  widget_graph.rs  window.rs
src/app/: context.rs  event.rs  mod.rs  size.rs  widget_graph.rs  window.rs
src/state/: clone_state.rs  key.rs  lens.rs  manager.rs  mod.rs  state.rs  state_inner.rs
src/style/: background.rs  mod.rs
src/widgets/: button.rs  empty.rs  lens.rs  mod.rs  spacer.rs  stacked.rs  state.rs  text.rs  widget.rs
src/widgets/layout/: container.rs  hbox.rs  mod.rs  vbox.rs
src/widgets/raw/: event_modifier.rs  mod.rs  padding.rs  pref_size.rs  stacked.rs  wrapper.rs
src/widgets/style/: background.rs  defaults.rs  dynamic_style.rs  mod.rs  static_style.rs
src/widgets/text/: input.rs  mod.rs
