[package]
name = "gui"
version = "0.1.0"
authors = ["Chris <jck2000@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = "0.6"
once_cell = "^1.4"
pool_tree = {git = "https://github.com/xarvic/pool_tree"}